--- a/src/index.html
+++ b/src/index.html
@@ -2,19 +2,21 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="boot/css/bootstrap.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <link rel="stylesheet" href="boot/css/bootstrap.min.css">
 
 </head>
 
 <body>
-    <h1>hola mundo</h1>
-    <p class="text-primary">.text-primary</p>
-    <script src="boot/js/jquery.js"></script>
-    <script src="boot/js/bootstrap.min.js"></script>
+  <!-- <h1>hola mundo</h1>
+  <p class="text-primary">.text-primary</p> -->
+  <section id = 'container'></section>
+  <script src="boot/js/jquery.js"></script>
+  <script src="boot/js/bootstrap.min.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 
 </html>
