añadiendo foto y pdf

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         <div class="mu-about-content-left">
-                                            <img class="mu-profile-img" src="assets/images/profile.jpg" alt="Profile Image">
+                                            <img class="mu-profile-img" src="assets/images/profile.JPG" alt="Profile Image">
                                         </div>
                                     </div>
                                     <div class="col-md-6">
@@ -532,7 +532,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="col-md-12">
+                                    <!-- <div class="col-md-12">
                                         <div class="mu-contact-bottom">
                                             <div id="form-messages"></div>
                                             <form id="ajax-contact" method="post" action="mailer.php" class="mu-contact-form">
@@ -548,7 +548,7 @@
                                                 <button type="submit" class="mu-send-msg-btn"><span>SUBMIT</span></button>
                                             </form>
                                         </div>
-                                    </div>
+                                    </div> -->
 
                                 </div>
                             </div>
@@ -570,7 +570,7 @@
     <footer id="mu-footer" role="contentinfo">
         <div class="container">
             <div class="mu-footer-area">
-                <p class="mu-copy-right">&copy; Copyright <a rel="nofollow" href="http://markups.io">markups.io</a>. All right reserved.</p>
+                <p class="mu-copy-right">&copy; Copyright <a rel="nofollow" href="">gabhu-dev</a>. All right reserved.</p>
             </div>
         </div>
 
