--- a/index.html
+++ b/index.html
@@ -125,17 +125,17 @@
                           <span>Html5</span>
                           <div class="mu-pro-bar mu-html5-bar">
                           </div>
-                          <span>css</span>
+                          <span>CSS3</span>
                           <div class="mu-pro-bar mu-css-bar">
 
                           </div>
-                          <span>javaScript</span>
+                          <span>JavaScript</span>
                           <div class="mu-pro-bar mu-photoshop-bar">
                           </div>
-                          <span>github</span>
+                          <span>WordPress</span>
                           <div class="mu-pro-bar mu-wordpress-bar">
                           </div>
-                          <span>node</span>
+                          <span>GitHub</span>
                           <div class="mu-pro-bar mu-jquery-bar">
                           </div>
                         </div>
